--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --text-link: #255fa4;
   --text-color: #1a1c1e;
+  --text-light: #545a60;
   --white: #fff;
   --background: #f2f3fa;
   --background-light: #fdfbff;
