--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -15,6 +15,7 @@
 // @import "./skyz-demo";
 // @import "./phone-demo";
 @import "./get-started";
+@import "./open-blog";
 // @import "./filters";
 // @import "./table";
 
