--- a/src/assets/scss/_blogs.scss
+++ b/src/assets/scss/_blogs.scss
@@ -56,17 +56,17 @@
     cursor: pointer;
     font-size: 2rem;
     background-color: var(--background-light);
-    color: var(--text-color);
-    // border: none;
     padding: 0.5rem 1rem;
     border: 1px solid #e5e5e5;
     border-radius: 8px;
     transition: all 0.3s ease-in-out;
+    color: var(--text-light);
+    border-color: var(--text-light);
   }
   button:hover,
   .filter-clicked {
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.13);
-    border-color: #bbb;
+    border-color: var(--text-color);
+    color: var(--text-color);
   }
 }
 .pagination {
@@ -77,14 +77,18 @@
 .page-number {
   font-size: 1.3rem;
   margin: 0 1rem;
+  color: var(--text-color);
 }
 .forward-btn,
 .back-btn {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  color: var(--text-color);
 }
-
+.disabled {
+  opacity: 30%;
+}
 @media screen and (max-width: 1000px) {
   .blogs {
     padding: 12vh 4vw;
