--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -17,6 +17,12 @@
   --on-red: #812813;
   --green: #c9ee9e;
   --on-green: #0f2000;
+  --kanban-open-bg: #D0FFC0;     
+  --kanban-inprogress-bg: #FFF6C0;
+  --kanban-closed-bg: #C0D4FF;    
+  --kanban-text: #1a1a1a;          /* טקסט רגיל */
+  --kanban-subtext: #444;          /* טקסט משני */
+  --kanban-border: #e0e0e0;        /* גבולות */
 }
 
 .dark-mode {
@@ -37,4 +43,11 @@
   --on-red: #ffdad2;
   --green: #0f2000;
   --on-green: #c9ee9e;
+    --kanban-open-bg: #1f4031;
+  --kanban-inprogress-bg: #4a430b;
+  --kanban-closed-bg: #263055;
+  --kanban-card-bg: #2b2b2b;
+  --kanban-text: #ffffff;
+  --kanban-subtext: #cccccc;
+  --kanban-border: #444444;
 }
