--- a/src/assets/scss/_kanban.scss
+++ b/src/assets/scss/_kanban.scss
@@ -8,7 +8,7 @@
  .kanban-wrapper {
     border-radius: 1rem;
     box-shadow: 0 7px 29px 0 #64646f33;
-    overflow: hidden;
+    // overflow: hidden;
     width: min-content;
      margin-bottom: 2rem;
     // background-color: var(--background);
@@ -28,7 +28,6 @@
   .kanban {
     background-color: var(--white);
     border-radius: 1rem;
-    width: 400px;
 
     .main-title {
       padding: 0 1rem;
@@ -100,7 +99,7 @@
         padding-top: 0.5rem;
 
         &.dragging-over {
-          background-color: #e0f7fa; // Change the background color when dragging over
+          background-color: var(--background); // Change the background color when dragging over
         }
         &.can-drop {
           border: 2px dashed #1e88e5; // Change the border when a task can be dropped
@@ -112,7 +111,7 @@
     }
 
     .kanban-task {
-      background-color: #fbfbfb;
+      background-color: var(--kanban-task-bg);
       border: 1px solid #ddd;
       border-radius: 4px;
       padding: 8px;
@@ -125,7 +124,7 @@
         border: 2px dashed #1e88e5; // Change the border when a task can be dropped
       }
       &:hover {
-        background-color: #f5f5f5; // Change the background color on hover
+        background-color: var( --kanban-task-bg-hover); // Change the background color on hover
       }
       .task-title-container {
         display: flex;
@@ -155,7 +154,7 @@
 
 .kanban-container .kanban {
   transition: max-height 0.5s ease, width 0.5s ease;
-  overflow: hidden;
+  // overflow: hidden;
 
   .main-title {
     transition: padding 0.5s ease, flex-direction 0.5s ease;
@@ -225,23 +224,23 @@
 }
 .kanban-task.dragging {
   opacity: 0.8;
-  background-color: #e3f2fd;
-  border: 2px solid #64b5f6;
+  background-color: var(--kanban-task-drag-bg);
+  border: 2px solid var(--kanban-task-drag-border);
   transform: rotate(2deg);
   transition: all 0.2s ease;
 }
 
 /* אזור המשימות בזמן גרירה */
 .kanban-tasks-list.highlight-drop {
-  border: 2px dashed #1e88e5;
+  border: 2px dashed var(--kanban-dropzone-border);
   border-radius: 6px;
   min-height: 80px;
-  background-color: #e3f2fd; /* כחול בהיר */
+  background-color: var(--kanban-dropzone-bg);
 }
 
 .highlight-drop {
-  border: 2px dashed #1e88e5;
-  background-color: #f1f8ff;
+  border: 2px dashed var(--kanban-dropzone-border);
+  background-color: var(--kanban-dropzone-highlight-bg);
 }
 .kanban-group {
   margin: 10px;
@@ -259,3 +258,18 @@
     gap: 0;
 }
 }
+.kanban-task.dragging {
+  position: fixed !important;
+  // bottom: 0;
+  right: 0;
+  z-index: 9999;
+  pointer-events: none;
+  // transform: rotate(2deg);
+    z-index: 9999 !important;
+  width: 300px;
+  max-width: 90vw;
+  pointer-events: none;
+  transform: rotate(2deg);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+}
+
