--- a/src/assets/scss/_kanban.scss
+++ b/src/assets/scss/_kanban.scss
@@ -12,6 +12,7 @@
     width: min-content;
      margin-bottom: 2rem;
     // background-color: var(--background);
+    overflow: auto;
 
 }
 .kanban-container {
@@ -22,7 +23,7 @@
     grid-template-columns: repeat(3, minmax(min-content, 40px));
     justify-content: flex-start;
     padding: 1rem;
-    overflow-x: auto;
+    overflow-x: scroll;
     transition: all .3s ease;
 
   .kanban {
