--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -270,7 +270,7 @@ textarea {
   @media screen and (max-width: 450px) {
     flex-direction: column;
     text-align: center;
-    width: 100%;
+    // width: 100%;
   }
 }
 
