--- a/src/assets/scss/_products.scss
+++ b/src/assets/scss/_products.scss
@@ -24,6 +24,7 @@
       display: flex;
       line-height: normal;
       align-items: flex-end;
+      flex-direction: column-reverse;
       img {
         width: 100px;
       }
