--- a/src/assets/scss/_advantages.scss
+++ b/src/assets/scss/_advantages.scss
@@ -25,6 +25,7 @@
     p {
       font-size: 19px;
       //   height: 140px;
+      text-align: center;
        flex-grow: 1; 
     }
     .icon-container {
