--- a/up/css/base.css
+++ b/up/css/base.css
@@ -298,6 +298,9 @@
 .blogs p {
   padding: 1rem 4rem;
 }
+.blogs .blogs-header-p {
+  text-align: center;
+}
 .blogs .blogs-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -315,9 +318,10 @@
   text-align: center;
   padding: 0.5rem 1rem;
   color: var(--text-color);
+  height: 9.5rem;
 }
 .blogs .blogs-container .blog p {
-  font-size: 14px;
+  font-size: 14px !important;
   padding: 0.5rem 1rem;
 }
 .blogs .blogs-container .blog .img-container {
@@ -409,18 +413,46 @@
   }
 }
 .blog-post {
-  margin-top: 10rem;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .blog-post h1 {
-  padding: 1rem 3rem;
+  padding: 2rem 3rem;
+  text-align: center;
 }
 .blog-post .content {
   display: flex;
   flex-direction: column;
   align-items: start;
-  padding: 1rem 3rem;
+  padding: 1rem 3.5rem;
+  margin: 0 4rem;
+}
+.blog-post .content h2 {
+  margin-top: 1rem;
+  font-size: 24px;
+}
+.blog-post .back-to-articles {
+  margin-top: 24px;
+  text-align: center;
 }
 
+.blog-post-img {
+  width: 500px;
+}
+
+@media screen and (max-width: 600px) {
+  .blog-post h1 {
+    font-size: 25px;
+  }
+  .blog-post .content {
+    margin: 0;
+  }
+  .blog-post .blog-post-img {
+    width: 300px;
+  }
+}
 :root {
   --text-link: #255fa4;
   --text-color: #1a1c1e;
@@ -496,6 +528,9 @@
   align-items: center;
   padding: 5rem 10rem;
   background-color: var(--white);
+}
+.about p {
+  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
@@ -581,6 +616,9 @@
   background-color: var(--background);
   min-height: 20vh;
   color: var(--text-color);
+}
+.hero p {
+  text-align: center;
 }
 .hero h1 {
   font-size: 7rem;
@@ -1469,6 +1507,7 @@ input:focus {
 }
 .advantages .advantage p {
   font-size: 19px;
+  text-align: center;
   flex-grow: 1;
 }
 .advantages .advantage .icon-container {
@@ -1494,6 +1533,7 @@ input:focus {
 }
 .get-started .left h1 {
   color: var(--text-color);
+  margin-top: 0;
 }
 .get-started .left p {
   color: var(--text-color);
@@ -1919,9 +1959,8 @@ h3 {
   letter-spacing: 0.1rem;
 }
 
-p {
-  font-size: calc(1.5rem + 0.4vw);
-  text-align: center;
+p, li {
+  font-size: calc(1.4rem + 0.4vw);
   color: var(--text-color);
 }
 
