--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -7,6 +7,9 @@
   align-items: center;
   padding: 5rem 10rem;
   background-color: var(--white);
+  p {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 800px) {
