--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -92,9 +92,12 @@ h3 {
   font-weight: 300;
   letter-spacing: 0.1rem;
 }
-p {
-  font-size: calc(1.5rem + 0.4vw);
-  text-align: center;
+// ul, ol {
+//   margin: 0 1.3rem;
+// }
+p, li {
+  font-size: calc(1.4rem + 0.4vw);
+  // text-align: center;
   color: var(--text-color);
 }
 
